--- a/inst/exercises/isotopeExchange/SIP_foodweb/SIP_agaricus.Rmd
+++ b/inst/exercises/isotopeExchange/SIP_foodweb/SIP_agaricus.Rmd
@@ -16,15 +16,19 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ```{r, eval = TRUE, cache = FALSE, echo = TRUE, warning=FALSE, message=FALSE}
 
-C.com.ini <- 1e3
-C.aga.ini <- 0.01
+tmax <- 1*21
+C.com.ini <- 1e3 # compost
+x.ini <- 0.01
 
 eff.glu2bac    <- 0.5
 m.bac          <- 0.2/2
 eff.glu2fun    <- 0.5
 m.fun          <- 0.1/2
 r.comp2glu.fun <- 0.1*3.25
+eff.glu2aga <- 0.5
 
+# calculate rate constants and initial bac population based on the assumption
+# of a steady state. assume specific initial fun and glu pool sizes
 C.fun.ini <- 1
 C.glu.ini <- 0.2
 r.glu2bac <- m.bac/(eff.glu2bac*C.glu.ini)
@@ -32,11 +36,10 @@ r.glu2fun <- m.fun/(eff.glu2fun*C.glu.ini)
 C.bac.ini <- (r.comp2glu.fun*C.fun.ini - r.glu2fun*C.fun.ini*C.glu.ini) / 
              (r.glu2bac*C.glu.ini)
 
-x.ini <- 0.01
+# this is now the concentration and atom fraction of the initial glu pool,
+# after the addition of 13C-glu.
 x.glu.ini <- 0.2
-C.glu.ini <- 0.25
-tmax <- 1*21
-eff.glu2aga <- 0.5
+C.glu.ini <- 0.25 # a little more than 0.2 above
 
 # Model parameters
 pars <- c(
@@ -72,6 +75,7 @@ Agaricus.model <-function(t, state, pars) {
   # -> lag-phase
   #r.glu2aga.t <- r.glu2aga * (1 - 1/(1+exp((t-4)/0.5)))
   #uptake.aga <- r.glu2aga.t * C.aga * C.glu
+  # different approach: logistic growth of agaricus (Robert-Jan's data)
   uptake.aga <- r.glu2aga * C.aga * (1-C.aga/K.aga)
   r.glu2aga.t <- r.glu2aga
 
@@ -136,14 +140,14 @@ yini <- c(C.com = C.com.ini, C13.com = x.ini*C.com.ini,
 
 # scenarios
 
-# default
+# default (steady state)
 yini1 <- yini
 pars1 <- pars
 
 # add glu production by agaricus, but no growth
 yini2 <- yini
-yini2["C.aga"] <- C.aga.ini
-yini2["C13.aga"] <- C.aga.ini*x.ini
+yini2["C.aga"] <- 0.01
+yini2["C13.aga"] <- 0.01*x.ini
 pars2 <- pars1
 pars2["r.comp2glu.aga"] <- 50
 
